--- a/css/produtos.css
+++ b/css/produtos.css
@@ -65,7 +65,7 @@ main {
   width: 100%;
   align-items: center;
   justify-content: center;
-
+  margin-top: 10px;
 }
 
 .produto-card-img img {
@@ -437,6 +437,7 @@ input[type="number"] {
 .pm-sec{ background:#fff; border-color:#d1d5db; }
 .pm-pri{ background:#2563eb; color:#fff; }
 .pm-btn:disabled{ opacity:.6; cursor:not-allowed; }
+
 
 
 
