--- a/css/produtos.css
+++ b/css/produtos.css
@@ -24,7 +24,7 @@ main {
 
 .produto-card {
   width: 200px;
-  max-height: 337px;  
+  max-height: 400px;  
   border-radius: 10px;
   overflow: hidden;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -40,6 +40,7 @@ main {
 
   min-width: 70px;
   width: 100%;
+  height:60.8;
   text-align: center;
   justify-content: center;
   padding: 4px;
@@ -55,6 +56,7 @@ main {
 }
 
 .marca {
+  height:12px;
   font-size: 11px;
   color: #777;
 }
@@ -437,6 +439,7 @@ input[type="number"] {
 .pm-sec{ background:#fff; border-color:#d1d5db; }
 .pm-pri{ background:#2563eb; color:#fff; }
 .pm-btn:disabled{ opacity:.6; cursor:not-allowed; }
+
 
 
 
