--- a/css/produtos.css
+++ b/css/produtos.css
@@ -24,6 +24,7 @@ main {
 
 .produto-card {
   width: 200px;
+  height: 397.8px;
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
@@ -441,6 +442,7 @@ input[type="number"] {
 .pm-sec{ background:#fff; border-color:#d1d5db; }
 .pm-pri{ background:#2563eb; color:#fff; }
 .pm-btn:disabled{ opacity:.6; cursor:not-allowed; }
+
 
 
 
